[package]
name = "waywrite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
relm4 = "0.6.*"
rten-tensor = "0.3.*"
rten = "0.3.1"
ocrs = "0.4.*"
image = "0.24.9"
anyhow = "1.0.81"
smithay-client-toolkit = "0.18.1"
